updating some typos.

--- a/quarto/alternatives/symbolics.qmd
+++ b/quarto/alternatives/symbolics.qmd
@@ -142,7 +142,7 @@ The `TermInterface` package is used by `SymbolicUtils` to explore the tree struc
 
   * `istree(ex)`: `true` if `ex` is not a *leaf* node (like a symbol or numeric literal)
   * `operation(ex)`: the function being called (if `istree` returns `true`)
-  * `arguments(ex)`: the arguments to the function begin called
+  * `arguments(ex)`: the arguments to the function being called
   * `symtype(ex)`: the inferred type of the expression
 
 
@@ -447,7 +447,7 @@ Symbolics.get_variables(ex)
 ### Polynomial manipulations
 
 
-There are some facilities for manipulating polynomial expressions in `Symbolics`. A polynomial, mathematically, is an expression involving one or more symbols with coefficients from a collection that has, at a minimum, addition and multiplication defined. The basic building blocks of polynomials are *monomials*, which are comprised of products of powers of the symbols. Mathematically, monomials are often allowed to have a multiplying coefficient and may be just a coefficient (if each symbol is taken to the power $0$), but here we consider just expressions of the type $x_1^{a_1} \cdot x_2^{a_2} \cdots x_k^{a_k}$ with the $a_i > 0$ as monomials.
+There are some facilities for manipulating polynomial expressions in `Symbolics`. A polynomial, mathematically, is an expression involving one or more symbols with coefficients from a collection that has, at a minimum, addition and multiplication defined. The basic building blocks of polynomials are *monomials*, which are comprised of products of powers of the symbols. Mathematically, monomials are often allowed to have a multiplying coefficient and may be just a coefficient (if each symbol is taken to the power $0$), but here we consider just expressions of the type $x_1^{a_1} \cdot x_2^{a_2} \cdots \cdot x_k^{a_k}$ with the $a_i > 0$ as monomials.
 
 
 With this understanding, then an expression can be broken up into monomials with a possible coefficient (possibly just $1$) *and* terms which are not monomials (such as a constant or a more complicated function of the symbols). This is what is returned by the `polynomial_coeffs` function.
@@ -461,7 +461,7 @@ For example
 d, r = polynomial_coeffs(a*x^2 + b*x + c, (x,))
 ```
 
-The first term output is a dictionary with keys which are the monomials and with values which are the coefficients. The second term, the residual, is all the remaining parts of the expression, in this case just the constant `c`.
+The first term output is a dictionary with keys which are the monomials and with values which are the coefficients. The second term, the residual, is all the remaining parts of the expression, in this case just $0$.
 
 
 The expression can then be reconstructed through
@@ -802,7 +802,7 @@ The example in the [paper](https://arxiv.org/pdf/2201.12468v2.pdf) describing th
 
 
 $$
-\int f(x) dx = q_1 x + q_2 \sin(x) + q_3 \cos(x) + q_4 x \sin(x) + q_4 x \cos(x)
+\int f(x) dx = q_1 x + q_2 \sin(x) + q_3 \cos(x) + q_4 x \sin(x) + q_5 x \cos(x)
 $$
 
 We differentiate the right hand side:
