--- a/quarto/integral_vector_calculus/div_grad_curl.qmd
+++ b/quarto/integral_vector_calculus/div_grad_curl.qmd
@@ -141,7 +141,7 @@ $$
 as $F \cdot \hat{i} = F_x$.
 
 
-*Were* we to divide by $\Delta V = \Delta x \Delta y \Delta z$ *and* take a limit as the volume shrinks, the limit would be $\partial{F}/\partial{x}$.
+*Were* we to divide by $\Delta V = \Delta x \Delta y \Delta z$ *and* take a limit as the volume shrinks, the limit would be $\partial{F_x}/\partial{x}$.
 
 
 If this is repeated for the other two pair of matching faces, we get a definition for the *divergence*:
@@ -363,7 +363,7 @@ In the limit, as  $\Delta{S} \rightarrow 0$, this will converge to $\partial{F_y
 Had the bottom of the box been used, a similar result would be found, up to a minus sign.
 
 
-Unlike the two dimensional case, there are other directions to consider and here the other sides will yield different answers. Consider now the face connecting $(x,y,z), (x+\Delta{x}, y, z), (x+\Delta{x}, y, z + \Delta{z})$, and $ (x,y,z+\Delta{z})$ with outward pointing normal $-\hat{j}$. Let $S_2$ denote this face and $C_2$ describe its boundary. Orient this curve so that the right hand rule points in the $-\hat{j}$ direction (the outward pointing normal). Then, as before, we can approximate:
+Unlike the two dimensional case, there are other directions to consider and here the other sides will yield different answers. Consider now the face connecting $(x,y,z), (x+\Delta{x}, y, z), (x+\Delta{x}, y, z + \Delta{z})$, and $(x,y,z +\Delta{z})$ with outward pointing normal $-\hat{j}$. Let $S_2$ denote this face and $C_2$ describe its boundary. Orient this curve so that the right hand rule points in the $-\hat{j}$ direction (the outward pointing normal). Then, as before, we can approximate:
 
 
 
@@ -522,7 +522,7 @@ Mathematically operators have not been seen previously, but the concept of an op
 ---
 
 
-In the `CalculusWithJulia` package, the constant `\nabla[\tab]`, producing $\nabla$ implements this operator for functions and symbolic expressions.
+In the `CalculusWithJulia` package, the constant `\nabla[tab]`, producing $\nabla$ implements this operator for functions and symbolic expressions.
 
 
 ```{julia}
@@ -807,7 +807,7 @@ The magnetic field has no divergence. This says that there no magnetic charges (
 
 
 
-The curl of the *time-varying* electric field is in the direction of the partial derivative of the magnetic field. For example, if a magnet is in motion in the in the  $z$ axis, then the electric field has  rotation in the $x-y$ plane *induced* by the motion of the magnet.
+The curl of the *time-varying* electric field is in the direction of the partial derivative of the magnetic field. For example, if a magnet is in motion in the  $z$ axis, then the electric field has  rotation in the $x-y$ plane *induced* by the motion of the magnet.
 
 
 > Ampere's circuital law: $\nabla\times{B} = \mu_0J + \mu_0\epsilon_0 \partial{E}/\partial{t}$
@@ -872,7 +872,7 @@ The cross product of two vector fields is a vector field for which the divergenc
 
 \begin{align*}
 \nabla\cdot(F \times G) &= (\nabla\times{F})\cdot G - F \cdot (\nabla\times{G})\\
-\nabla\times(F \times G) &= F(\nabla\cdot{G}) - G(\nabla\cdot{F} + (G\cdot\nabla)F-(F\cdot\nabla)G\\
+\nabla\times(F \times G) &= F(\nabla\cdot{G}) - G(\nabla\cdot{F}) + (G\cdot\nabla)F-(F\cdot\nabla)G\\
 &= \nabla\cdot(BA^t - AB^t).
 \end{align*}
 
@@ -894,7 +894,7 @@ Surprisingly, the curl and divergence satisfy two vanishing properties. First
 
 
 
-if the scalar function $f$ is has continuous second derivatives (so the mixed partials do not depend on order).
+if the scalar function $f$ has continuous second derivatives (so the mixed partials do not depend on order).
 
 
 Vector fields where $F = \nabla{f}$ are conservative. Conservative fields have path independence, so any line integral, $\oint F\cdot \hat{T} ds$,  around a closed loop will be $0$.  But the curl is defined as a limit of such integrals, so it too will be $\vec{0}$. In short,  conservative fields have no rotation.
@@ -1087,7 +1087,7 @@ d\vec{r} &= \langle dx,dy,dz \rangle = J \langle du,dv,dw\rangle\\
 \frac{\partial{\vec{r}}}{\partial{v}} \vdots
 \frac{\partial{\vec{r}}}{\partial{w}} \right] \langle du,dv,dw\rangle\\
 &= \frac{\partial{\vec{r}}}{\partial{u}} du +
-\frac{\partial{\vec{r}}}{\partial{v}} dv
+\frac{\partial{\vec{r}}}{\partial{v}} dv +
 \frac{\partial{\vec{r}}}{\partial{w}} dw.
 \end{align*}
 
@@ -1128,7 +1128,7 @@ Consider the surface for constant $u$. The vector $\hat{e}_v$ and $\hat{e}_w$ li
 
 
 $$
-dS_u = \|  h_v dv \hat{e}_v \times  h_w dw \hat{e}_w \| = h_v h_w dv dw \| \hat{e}_v \| = h_v h_w dv dw.
+dS_u = \|  h_v dv \hat{e}_v \times  h_w dw \hat{e}_w \| = h_v h_w dv dw \| \hat{e}_u \| = h_v h_w dv dw.
 $$
 
 This uses orthogonality, so $\hat{e}_v \times \hat{e}_w$ is parallel to $\hat{e}_u$ and has unit length. Similarly, $dS_v = h_u h_w du dw$ and $dS_w = h_u h_v du dv$ .
@@ -1144,7 +1144,7 @@ The volume element is found by *projecting* $d\vec{r}$ onto the $\hat{e}_u$, $\h
 \left[(d\vec{r} \cdot\hat{e}_v) \hat{e}_v\right] \times
 \left[(d\vec{r} \cdot\hat{e}_w) \hat{e}_w\right]
 \right) &=
-(h_u h_v h_w) ( du dv dw ) (\hat{e}_u \cdot (\hat{e}_v \times \hat{e}_w) \\
+(h_u h_v h_w) ( du dv dw ) (\hat{e}_u \cdot (\hat{e}_v \times \hat{e}_w)) \\
 &=
 h_u h_v h_w  du dv dw,
 \end{align*}
@@ -1229,7 +1229,7 @@ With this, we have $h_r=1$, $h_\theta=r\sin(\phi)$, and $h_\phi = r$. So that
 
 
 \begin{align*}
-dl &= \sqrt{dr^2 + (r\sin(\phi)d\theta^2) + (rd\phi)^2},\\
+dl &= \sqrt{dr^2 + (r\sin(\phi)d\theta)^2 + (rd\phi)^2},\\
 dS_r &= r^2\sin(\phi)d\theta d\phi,\\
 dS_\theta &= rdr d\phi,\\
 dS_\phi &= r\sin(\phi)dr d\theta, \quad\text{and}\\
@@ -1360,7 +1360,7 @@ $$
 \left[
 \frac{\partial{F_r r}}{\partial{r}} +
 \frac{\partial{F_\theta}}{\partial{\theta}} +
-\frac{\partial{F_x}}{\partial{z}}
+\frac{\partial{F_z r}}{\partial{z}}
 \right].
 $$
 
