--- a/quarto/integral_vector_calculus/line_integrals.qmd
+++ b/quarto/integral_vector_calculus/line_integrals.qmd
@@ -137,7 +137,7 @@ quadgk(integrand, 0, pi)
 ##### Example
 
 
-Imagine the $z$ axis is a wire and in the $x$-$y$ plane the unit circle is a path. If there is a magnetic field, $B$, then the field will induce a current to flow along the wire. [Ampere's]https://tinyurl.com/y4gl9pgu) circuital law states $\oint_C B\cdot\hat{T} ds = \mu_0 I$, where $\mu_0$ is a constant and $I$ the current. If the magnetic field is given by $B=(x^2+y^2)^{1/2}\langle -y,x,0\rangle$ compute $I$ in terms of $\mu_0$.
+Imagine the $z$ axis is a wire and in the $x$-$y$ plane the unit circle is a path. If there is a magnetic field, $B$, then the field will induce a current to flow along the wire. [Ampere's](https://tinyurl.com/y4gl9pgu) circuital law states $\oint_C B\cdot\hat{T} ds = \mu_0 I$, where $\mu_0$ is a constant and $I$ the current. If the magnetic field is given by $B=(x^2+y^2)^{1/2}\langle -y,x,0\rangle$ compute $I$ in terms of $\mu_0$.
 
 
 We have the path is parameterized by $\vec{r}(t) = \langle \cos(t), \sin(t), 0\rangle$, and so $\hat{T} = \langle -\sin(t), \cos(t), 0\rangle$ and the integrand, $B\cdot\hat{T}$ is
@@ -145,7 +145,7 @@ We have the path is parameterized by $\vec{r}(t) = \langle \cos(t), \sin(t), 0\r
 
 $$
 (x^2 + y^2)^{-1/2}\langle -\sin(t), \cos(t), 0\rangle\cdot
-\langle -\sin(t), \cos(t), 0\rangle = (x^2 + y^2)(-1/2),
+\langle -\sin(t), \cos(t), 0\rangle = (x^2 + y^2)^{-1/2},
 $$
 
 which is $1$ on the path $C$. So $\int_C B\cdot\hat{T} ds = \int_C ds = 2\pi$. So the current satisfies $2\pi = \mu_0 I$, so $I = (2\pi)/\mu_0$.
@@ -177,7 +177,7 @@ The canonical example is [work](https://en.wikipedia.org/wiki/Work_(physics)), w
 ---
 
 
-In the $n=2$ case, there is another useful interpretation of the line integral. In this dimension the normal vector, $\hat{N}$, is well defined in terms of the tangent vector, $\hat{T}$, through a rotation: $\langle a,b\rangle^t = \langle b,-a\rangle^t$. (The negative, $\langle -b,a\rangle$ is also a candidate, the difference in this choice would lead to a sign difference in  in the answer.) This allows the definition of a different line integral, called a flow integral, as detailed later:
+In the $n=2$ case, there is another useful interpretation of the line integral. In this dimension the normal vector, $\hat{N}$, is well defined in terms of the tangent vector, $\hat{T}$, through a rotation: $\langle a,b\rangle^t = \langle b,-a\rangle$. (The negative, $\langle -b,a\rangle$ is also a candidate, the difference in this choice would lead to a sign difference in the answer.) This allows the definition of a different line integral, called a flow integral, as detailed later:
 
 
 > The *flow* across a curve $C$ is given by
@@ -470,7 +470,7 @@ For a Jordan curve, the positive orientation of the curve is such that the norma
 ##### Example
 
 
-The [New York Times](https://www.nytimes.com/interactive/2019/06/20/world/asia/hong-kong-protest-size.html) showed aerial photos to estimate the number of protest marchers in Hong Kong. This is a more precise way to estimate crowd size, but requires a drone or some such to take photos. If one is on the ground, the number of marchers could be *estimated* by finding the flow of marchers across a given width. In the Times article, we see "Protestors packed the width of Hennessy Road for more than 5 hours. If this road is 50 meters wide and the rate of the marchers is 3 kilometers per hour, estimate the number of marchers.
+The [New York Times](https://www.nytimes.com/interactive/2019/06/20/world/asia/hong-kong-protest-size.html) showed aerial photos to estimate the number of protest marchers in Hong Kong. This is a more precise way to estimate crowd size, but requires a drone or some such to take photos. If one is on the ground, the number of marchers could be *estimated* by finding the flow of marchers across a given width. In the Times article, we see "Protestors packed the width of Hennessy Road for more than 5 hours. If this road is 40 meters wide and the rate of the marchers is 3 kilometers per hour, estimate the number of marchers.
 
 
 The basic idea is to compute the rate of flow *across* a part of the street and then multiply by time. For computational sake, say the marchers are on a grid of 1 meters (that is in a 40m wide street, there is room for 40 marchers at a time. In one minute, the marchers move 50 meters:
@@ -505,7 +505,7 @@ r(t) = [cos(t), 2sin(t)]
 F(x,y) = [cos(x), sin(x*y)]
 F(v) = F(v...)
 normal(a,b) = [b, -a]
-G(t) = (F ∘ r)(t) ⋅ normal(r(t)...)
+G(t) = (F ∘ r)(t) ⋅ normal(r'(t)...)
 a, b = 0, pi/2
 quadgk(G, a, b)[1]
 ```
@@ -547,7 +547,7 @@ integrate((F ∘ r)(t) ⋅ normal(T(t)...) , (t, 0, 2PI))
 ##### Example
 
 
-Let $F(x,y) = \langle x, y\rangle / \| \langle x, y\rangle\|^3$:
+Let $F(x,y) = \langle x, y\rangle / \| \langle x, y\rangle\|^2$:
 
 
 ```{julia}
@@ -710,7 +710,7 @@ $$
 In the case that the surface is described by $z = f(x,y)$, then the formula's become $\vec{v}_1 = \langle 1,0,\partial{f}/\partial{x}\rangle$ and $\vec{v}_2 = \langle 0, 1, \partial{f}/\partial{y}\rangle$ with cross product $\vec{v}_1\times\vec{v}_2 =\langle -\partial{f}/\partial{x},  -\partial{f}/\partial{y},1\rangle$.
 
 
-The value $\| \frac{\partial{\Phi}}{\partial{u}} \times \frac{\partial{\Phi}}{\partial{y}} \|$ is called the *surface element*. As seen, it is the scaling between a unit area in the $u-v$ plane and the approximating area on the surface after the parameterization.
+The value $\| \frac{\partial{\Phi}}{\partial{u}} \times \frac{\partial{\Phi}}{\partial{v}} \|$ is called the *surface element*. As seen, it is the scaling between a unit area in the $u-v$ plane and the approximating area on the surface after the parameterization.
 
 
 ### Examples
@@ -806,10 +806,10 @@ Phi(x, theta) = [x, 𝒇(x)*cos(theta), 𝒇(x)*sin(theta)]
 Jac = Phi(x, theta).jacobian([x, theta])
 v1, v2 = Jac[:,1], Jac[:,2]
 se = norm(v1 × v2)
-se .|> simplify
+se |> simplify
 ```
 
-This in agreement with the previous formula.
+This is in agreement with the previous formula.
 
 
 ##### Example
@@ -872,7 +872,7 @@ $$
 du dv.
 $$
 
-When the surface is described by a function, $z=f(x,y)$, the parameterization is $(u,v) \rightarrow \langle u, v, f(u,v)\rangle$, and the two vectors are $\vec{v}_1 = \langle 1, 0, \partial{f}/\partial{u}\rangle$ and $\vec{v}_2 = \langle 0, 1, \partial{f}/\partial{v}\rangle$ and their cross product is $\vec{v}_1\times\vec{v}_1=\langle -\partial{f}/\partial{u}, -\partial{f}/\partial{v}, 1\rangle$.
+When the surface is described by a function, $z=f(x,y)$, the parameterization is $(u,v) \rightarrow \langle u, v, f(u,v)\rangle$, and the two vectors are $\vec{v}_1 = \langle 1, 0, \partial{f}/\partial{u}\rangle$ and $\vec{v}_2 = \langle 0, 1, \partial{f}/\partial{v}\rangle$ and their cross product is $\vec{v}_1\times\vec{v}_2=\langle -\partial{f}/\partial{u}, -\partial{f}/\partial{v}, 1\rangle$.
 
 
 ##### Example
@@ -902,7 +902,7 @@ integrate(F(Phi(y,theta)) ⋅ Normal, (theta, 0, 2PI), (y, 0, 4))
 ##### Example
 
 
-Let $S$ be the closed surface bounded by the cylinder $x^2 + y^2 = 1$, the plane $z=0$, and the plane $z = 1+x$. Let $F(x,y,z) =  \langle 1, y, -z \rangle$. Compute $\oint_S F\cdot\vec{N} dS$.
+Let $S$ be the closed surface bounded by the cylinder $x^2 + y^2 = 1$, the plane $z=0$, and the plane $z = 1+x$. Let $F(x,y,z) =  \langle 1, y, z \rangle$. Compute $\oint_S F\cdot\vec{N} dS$.
 
 
 ```{julia}
@@ -910,7 +910,7 @@ Let $S$ be the closed surface bounded by the cylinder $x^2 + y^2 = 1$, the plane
 𝐅(v) = 𝐅(v...)
 ```
 
-The surface has three faces, with different outward pointing normals for each. Let $S_1$ be the unit disk in the $x-y$ plane with normal $-\hat{k}$; $S_2$ be the top part, with normal $\langle \langle-1, 0, 1\rangle$ (as the plane is $-1x + 0y + 1z = 1$); and $S_3$ be the cylindrical part with outward pointing normal $\vec{r}$.
+The surface has three faces, with different outward pointing normals for each. Let $S_1$ be the unit disk in the $x-y$ plane with normal $-\hat{k}$; $S_2$ be the top part, with normal $\langle-1, 0, 1\rangle$ (as the plane is $-1x + 0y + 1z = 1$); and $S_3$ be the cylindrical part with outward pointing normal $\vec{r}$.
 
 
 Integrating over $S_1$, we have the parameterization $\Phi(r,\theta) = \langle r\cos(\theta), r\sin(\theta), 0\rangle$:
@@ -963,7 +963,7 @@ The contribution is
 
 
 ```{julia}
-A₃ = integrate(𝐅(𝐏hi₃(𝐑, 𝐭heta)) ⋅ (-𝐍ormal₃), (𝐳, 0, 1 + cos(𝐭heta)), (𝐭heta, 0, 2PI))
+A₃ = integrate(𝐅(𝐏hi₃(𝐳, 𝐭heta)) ⋅ (-𝐍ormal₃), (𝐳, 0, 1 + cos(𝐭heta)), (𝐭heta, 0, 2PI))
 ```
 
 In total, the surface integral is
@@ -989,10 +989,10 @@ We have (using $\oint$ for a surface integral over a closed surface):
 
 
 $$
-\oint_S S \cdot \vec{N} dS =
+\oint_S E \cdot \vec{N} dS =
 \oint_S \frac{kq}{\|\vec{r}\|^2} \hat{r} \cdot \hat{r} dS =
 \oint_S \frac{kq}{\|\vec{r}\|^2} dS =
-kqq_0 \cdot SA(S) =
+kq \cdot SA(S) =
 4\pi k q
 $$
 
@@ -1038,7 +1038,7 @@ That constant being $0$.
 This is a consequence of [Gauss's law](https://en.wikipedia.org/wiki/Gauss%27s_law), which states that for an electric field $E$, the electric flux through a closed surface is proportional to the total charge contained. (Gauss's law is related to the upcoming divergence theorem.) When `a` is inside the surface, the total charge is the same regardless of exactly where, so the integral's value is always the same. When `a` is outside the surface, the total charge inside the sphere is $0$, so the flux integral is as well.
 
 
-Gauss's law is typically used to identify the electric field by choosing a judicious surface where the surface integral can be computed. For example, suppose a ball of radius $R_0$ has a *uniform* charge. What is the electric field generated? *Assuming* it is dependent only on the distance from the center of the charged ball, we can, first, take a sphere of radius $R > R_0$ and note that $E(\vec{r})\cdot\hat{N}(r) = \|E(R)\|$, the magnitude a distance $R$ away. So the surface integral is simply $\|E(R)\|4\pi R^2$ and by Gauss's law a constant depending on the total charge. So $\|E(R)\| ~ 1/R^2$. When $R < R_0$, the same applies, but the total charge within the surface will be like $(R/R_0 )^3$, so the result will be *linear* in $R$, as:
+Gauss's law is typically used to identify the electric field by choosing a judicious surface where the surface integral can be computed. For example, suppose a ball of radius $R_0$ has a *uniform* charge. What is the electric field generated? *Assuming* it is dependent only on the distance from the center of the charged ball, we can, first, take a sphere of radius $R > R_0$ and note that $E(\vec{r})\cdot\hat{N}(r) = \|E(R)\|$, the magnitude a distance $R$ away. So the surface integral is simply $\|E(R)\|4\pi R^2$ and by Gauss's law a constant depending on the total charge. So $\|E(R)\| \sim 1/R^2$. When $R < R_0$, the same applies, but the total charge within the surface will be like $(R/R_0 )^3$, so the result will be *linear* in $R$, as:
 
 
 $$
@@ -1198,7 +1198,7 @@ Let $F(x,y) = (x^2+y^2)^{-k/2} \langle x, y \rangle$ be a radial field. The work
 
 
 $$
-\int_C F\cdot \frac{dr}{dt} dt = \int_0^{2pi} \langle (1)^{-k/2} \cos(t), \sin(t) \rangle \cdot \langle-\sin(t), \cos(t)\rangle dt.
+\int_C F\cdot \frac{dr}{dt} dt = \int_0^{2pi} (1)^{-k/2} \langle  \cos(t), \sin(t) \rangle \cdot \langle-\sin(t), \cos(t)\rangle dt.
 $$
 
 For any $k$, this integral will be:
@@ -1236,7 +1236,7 @@ Why is this surprising?
 #| hold: true
 #| echo: false
 choices = [
-L"The field is a potential field, but the path integral around $0$ is not path dependent.",
+L"The field is a potential field, but the path integral around $0$ is not path independent.",
 L"The value of $d/dt(f\circ\vec{r})=0$, so the integral should be $0$."
 ]
 answ =1
@@ -1340,7 +1340,7 @@ answ = 1
 radioq(choices, answ, keep_order=true)
 ```
 
-Compute $\vec{v}_2 = \partial{\Phi}/\partial{u}$
+Compute $\vec{v}_2 = \partial{\Phi}/\partial{v}$
 
 
 ```{julia}
@@ -1394,7 +1394,7 @@ numericq(a)
 ###### Question
 
 
-For the surface parameterized by $\Phi(u,v) = \langle uv, u^2v, uv^2\rangle$ for $(u,v)$ in $[0,1]\times[0,1]$ and vector field $F(x,y,z) =\langle y^2, x, z\langle$, numerically find $\iint_S (F\cdot\hat{N}) dS$.
+For the surface parameterized by $\Phi(u,v) = \langle uv, u^2v, uv^2\rangle$ for $(u,v)$ in $[0,1]\times[0,1]$ and vector field $F(x,y,z) =\langle y^2, x, z\rangle$, numerically find $\iint_S (F\cdot\hat{N}) dS$.
 
 
 ```{julia}
@@ -1456,11 +1456,11 @@ Compute this.
 #| echo: false
 #@syms x y real=true
 #phi = 1 - (x+y)
-#SE = sqrt(1 + diff(phi,x)^2, diff(phi,y)^2)
-#integrate(x*y*S_, (y, 0, 1-x), (x,0,1)) # \sqrt{2}/24
+#SE = sqrt(1 + diff(phi,x)^2 + diff(phi,y)^2)
+#integrate(x*y*SE, (y, 0, 1-x), (x,0,1)) # \sqrt{3}/24
 choices = [
-raw" ``\sqrt{2}/24``",
-raw" ``2/\sqrt{24}``",
+raw" ``\sqrt{3}/24``",
+raw" ``3/\sqrt{24}``",
 raw" ``1/12``"
 ]
 answ = 1
