--- a/quarto/integral_vector_calculus/review.qmd
+++ b/quarto/integral_vector_calculus/review.qmd
@@ -76,7 +76,7 @@ The **tangent** vector is the unit vector in the direction of $\vec{r}'(t)$:
 
 
 $$
-\hat{T} = \frac{\vec{r}'(t)}{\|\vec{r}(t)\|}.
+\hat{T} = \frac{\vec{r}'(t)}{\|\vec{r}'(t)\|}.
 $$
 
 The path is parameterized by *arc* length if $\|\vec{r}'(t)\| = 1$ for all $t$. In this case an "$s$" is used for the parameter, as a notational hint: $\hat{T} = d\vec{r}/ds$.
@@ -240,7 +240,7 @@ Define the **divergence** of a vector-valued function $F:R^n \rightarrow R^n$ by
 $$
 \text{divergence}(F) =
 \frac{\partial{F_{x_1}}}{\partial{x_1}} +
-\frac{\partial{F_{x_2}}}{\partial{x_2}} + \cdots
+\frac{\partial{F_{x_2}}}{\partial{x_2}} + \cdots +
 \frac{\partial{F_{x_n}}}{\partial{x_n}}.
 $$
 
@@ -424,7 +424,7 @@ For $F=\langle -y,x\rangle$, Green's theorem says the area of $D$ is given by $(
 ### Surface integrals
 
 
-A surface in $3$ dimensions can be described by a scalar function $z=f(x,y)$, a parameterization $F:R^2 \rightarrow R^3$ or as a level curve of a scalar function $f(x,y,z)$. The second case, covers the first through the parameterization $(x,y) \rightarrow (x,y,f(x,y)$. For a parameterization of a surface, $\Phi(u,v) = \langle \Phi_x, \Phi_y, \Phi_z\rangle$, let $\partial{\Phi}/\partial{u}$ be the $3$-d vector $\langle \partial{\Phi_x}/\partial{u}, \partial{\Phi_y}/\partial{u}, \partial{\Phi_z}/\partial{u}\rangle$, similarly define $\partial{\Phi}/\partial{v}$. As vectors, these lie in the tangent plane to the surface and this plane has normal vector $\vec{N}=\partial{\Phi}/\partial{u}\times\partial{\Phi}/\partial{v}$. For a closed surface, the parametrization is positive if $\vec{N}$ is an outward pointing normal. Let the *surface element* be defined by $\|\vec{N}\|$.
+A surface in $3$ dimensions can be described by a scalar function $z=f(x,y)$, a parameterization $F:R^2 \rightarrow R^3$ or as a level curve of a scalar function $f(x,y,z)$. The second case, covers the first through the parameterization $(x,y) \rightarrow (x,y,f(x,y))$. For a parameterization of a surface, $\Phi(u,v) = \langle \Phi_x, \Phi_y, \Phi_z\rangle$, let $\partial{\Phi}/\partial{u}$ be the $3$-d vector $\langle \partial{\Phi_x}/\partial{u}, \partial{\Phi_y}/\partial{u}, \partial{\Phi_z}/\partial{u}\rangle$, similarly define $\partial{\Phi}/\partial{v}$. As vectors, these lie in the tangent plane to the surface and this plane has normal vector $\vec{N}=\partial{\Phi}/\partial{u}\times\partial{\Phi}/\partial{v}$. For a closed surface, the parametrization is positive if $\vec{N}$ is an outward pointing normal. Let the *surface element* be defined by $\|\vec{N}\|$.
 
 
 The surface integral of a scalar function $f:R^3 \rightarrow R$ for a parameterization $\Phi:R \rightarrow S$ is defined by
