--- a/quarto/integral_vector_calculus/stokes_theorem.qmd
+++ b/quarto/integral_vector_calculus/stokes_theorem.qmd
@@ -118,7 +118,7 @@ The total area under the blue curve from $a$ to $b$, is found by adding the area
 Let's consider now what an integral over the boundary would mean. The region, or interval, $[x_{i-1}, x_i]$ has a boundary that clearly consists of the two points $x_{i-1}$ and $x_i$. If we *orient* the boundary, as we need to for higher dimensional boundaries, using the outward facing direction, then the oriented boundary at the right-hand end point, $x_i$, would point towards $+\infty$ and the left-hand end point, $x_{i-1}$, would be oriented to point to $-\infty$. An "integral" on the boundary of $F$ would naturally be $F(b) \times 1$ plus $F(a) \times -1$, or $F(b)-F(a)$.
 
 
-With this choice of integral over the boundary, we can see much cancellation arises were we to compute this integral for each piece, as we would have with $a=x_0 < x_1 < \cdots x_{n-1} < x_n=b$:
+With this choice of integral over the boundary, we can see much cancellation arises were we to compute this integral for each piece, as we would have with $a=x_0 < x_1 < \cdots < x_{n-1} < x_n=b$:
 
 
 $$
@@ -199,7 +199,7 @@ $$
 \right) \Delta{x}\Delta{y} .
 $$
 
-We interpret the right hand side as a Riemann sum approximation for the $2$ dimensional integral of the function $f(x,y) = \frac{\partial{F_x}}{\partial{y}} - \frac{\partial{F_y}}{\partial{x}}=\text{curl}(F)$, the two-dimensional curl. Were the green squares continued to fill out the large blue square, then the sum of these terms would approximate the integral
+We interpret the right hand side as a Riemann sum approximation for the $2$ dimensional integral of the function $f(x,y) = \frac{\partial{F_y}}{\partial{x}} - \frac{\partial{F_x}}{\partial{y}}=\text{curl}(F)$, the two-dimensional curl. Were the green squares continued to fill out the large blue square, then the sum of these terms would approximate the integral
 
 
 $$
@@ -375,7 +375,7 @@ Fx, Fy = F(x,y)
 diff(Fy, x) - diff(Fx, y) |> simplify
 ```
 
-As the integrand is $00$,  $\iint_D \left( \partial{F_y}/{\partial{x}}-\partial{F_xy}/{\partial{y}}\right)dA = 0$, as well. But,
+As the integrand is $0$,  $\iint_D \left( \partial{F_y}/{\partial{x}}-\partial{F_xy}/{\partial{y}}\right)dA = 0$, as well. But,
 
 
 $$
@@ -394,7 +394,7 @@ That is, for this example, Green's theorem does **not** apply, as the two integr
 A simple closed curve is one that does not cross itself. Green's theorem applies to regions bounded by curves which have finitely many crosses provided the orientation used is consistent throughout.
 
 
-Consider the curve $y = f(x)$, $a \leq x \leq b$, assuming $f$ is continuous, $f(a) > 0$, and $f(b) < 0$. We can use Green's theorem to compute the signed "area" under under $f$ if we consider the curve in $R^2$ from $(b,0)$ to $(a,0)$ to $(a, f(a))$, to $(b, f(b))$ and back to $(b,0)$ in that orientation. This will cross at each zero of $f$.
+Consider the curve $y = f(x)$, $a \leq x \leq b$, assuming $f$ is continuous, $f(a) > 0$, and $f(b) < 0$. We can use Green's theorem to compute the signed "area" under $f$ if we consider the curve in $R^2$ from $(a,0)$ to $(b,0)$ to $(b, f(b))$, to $(a, f(a))$ and back to $(a,0)$ in that orientation. This will cross at each zero of $f$.
 
 
 ```{julia}
@@ -403,11 +403,11 @@ Consider the curve $y = f(x)$, $a \leq x \leq b$, assuming $f$ is continuous, $f
 a, b = pi/2, 3pi/2
 f(x) = sin(x)
 p = plot(f, a, b, legend=false,  xticks=nothing,  border=:none, color=:green)
-arrow!(p, [3pi/4, f(3pi/4)], 0.01*[1,cos(3pi/4)], color = :green)
-arrow!(p, [5pi/4, f(5pi/4)], 0.01*[1,cos(5pi/4)], color = :green)
-arrow!(p, [a,0], [0, f(a)], color=:red)
-arrow!(p, [b, f(b)], [0, -f(b)], color=:blue)
-arrow!(p, [b, 0], [a-b, 0], color=:black)
+arrow!(p, [3pi/4, f(3pi/4)], -0.01*[1,cos(3pi/4)], color = :green)
+arrow!(p, [5pi/4, f(5pi/4)], -0.01*[1,cos(5pi/4)], color = :green)
+arrow!(p, [a,f(a)], [0, -f(a)], color=:red)
+arrow!(p, [b, 0], [0, f(b)], color=:blue)
+arrow!(p, [a, 0], [b-a, 0], color=:black)
 del = -0.1
 annotate!(p, [(a,del, "a"), (b,-del,"b")])
 p
@@ -418,8 +418,8 @@ Let $A$ label the red line, $B$ the green curve, $C$ the blue line, and $D$ the 
 
 
 \begin{align*}
-\int_A (xdy - ydx) &= a f(a)\\
-\int_C (xdy - ydx) &= b(-f(b))\\
+\int_A (xdy - ydx) &= a(-f(a))\\
+\int_C (xdy - ydx) &= b f(b)\\
 \int_D (xdy - ydx) &= 0\\
 \end{align*}
 
@@ -430,7 +430,7 @@ Finally the integral over $B$, using integration by parts:
 
 \begin{align*}
 \int_B F(\vec{r}(t))\cdot \frac{d\vec{r}(t)}{dt} dt &=
-\int_b^a \langle -f(t),t)\rangle\cdot\langle 1, f'(t)\rangle dt\\
+\int_b^a \langle -f(t),t \rangle\cdot\langle 1, f'(t)\rangle dt\\
 &= \int_a^b f(t)dt - \int_a^b tf'(t)dt\\
 &= \int_a^b f(t)dt - \left(tf(t)\mid_a^b - \int_a^b f(t) dt\right).
 \end{align*}
@@ -489,7 +489,7 @@ Adding the two gives $4\pi - \pi = \pi \cdot(b^2 - a^2)$, with $b=2$ and $a=1$.
 #### Flow not flux
 
 
-Green's theorem has a complement in terms of flow across $C$. As $C$ is positively oriented (so the bounded interior piece is on the left of $\hat{T}$ as the curve is traced), a normal comes by rotating $90^\circ$ counterclockwise. That is if $\hat{T} = \langle a, b\rangle$, then $\hat{N} = \langle b, -a\rangle$.
+Green's theorem has a complement in terms of flow across $C$. As $C$ is positively oriented (so the bounded interior piece is on the left of $\hat{T}$ as the curve is traced), a normal comes by rotating $90^\circ$ clockwise. That is if $\hat{T} = \langle a, b\rangle$, then $\hat{N} = \langle b, -a\rangle$.
 
 
 Let $F = \langle F_x, F_y \rangle$ and $G = \langle F_y, -F_x \rangle$, then $G\cdot\hat{T} = -F\cdot\hat{N}$. The curl formula applied to $G$ becomes
@@ -497,7 +497,7 @@ Let $F = \langle F_x, F_y \rangle$ and $G = \langle F_y, -F_x \rangle$, then $G\
 
 $$
 \frac{\partial{G_y}}{\partial{x}} - \frac{\partial{G_x}}{\partial{y}} =
-\frac{\partial{-F_x}}{\partial{x}}-\frac{\partial{(F_y)}}{\partial{y}}
+\frac{\partial{(-F_x)}}{\partial{x}}-\frac{\partial{(F_y)}}{\partial{y}}
 =
 -\left(\frac{\partial{F_x}}{\partial{x}} + \frac{\partial{F_y}}{\partial{y}}\right)=
 -\nabla\cdot{F}.
@@ -596,19 +596,19 @@ p
 Again, the microscopic boundary integrals when added will give a macroscopic boundary integral due to cancellations.
 
 
-But, as seen in the derivation of the divergence, only modified for $2$ dimensions, we have $\nabla\cdot{F} = \lim \frac{1}{\Delta S} \oint_C F\cdot\hat{N}$, so for each cell
+But, as seen in the derivation of the divergence, only modified for $2$ dimensions, we have $\nabla\cdot{F} = \lim \frac{1}{\Delta S} \oint_C F\cdot\hat{N} ds$, so for each cell
 
 
 $$
-\oint_{C_i} F\cdot\hat{N} \approx \left(\nabla\cdot{F}\right)\Delta{x}\Delta{y},
+\oint_{C_i} F\cdot\hat{N} ds \approx \left(\nabla\cdot{F}\right)\Delta{x}\Delta{y},
 $$
 
 an approximating Riemann sum for $\iint_D \nabla\cdot{F} dA$. This yields:
 
 
 $$
-\oint_C (F \cdot\hat{N}) dA =
-\sum_i \oint_{C_i}  (F \cdot\hat{N}) dA \approx
+\oint_C (F \cdot\hat{N}) ds =
+\sum_i \oint_{C_i}  (F \cdot\hat{N}) ds \approx
 \sum \left(\nabla\cdot{F}\right)\Delta{x}\Delta{y} \approx
 \iint_S \nabla\cdot{F}dA,
 $$
@@ -630,11 +630,11 @@ The integral of the flow across $C$ consists of $4$ parts. By symmetry, they all
 
 $$
 \int_C F \cdot \hat{N} ds=
-\int_{-1}^1 \langle F_x, F_y\rangle\cdot\langle 0, 1\rangle ds =
-\int_{-1}^1 b dy = 2b.
+\int_{-1}^1 \langle F_x, F_y\rangle\cdot\langle 1, 0\rangle ds =
+\int_{-1}^1 a dy = 2a.
 $$
 
-Integrating across the top will give $2a$, along the bottom $2a$, and along the left side $2b$ totaling $4(a+b)$.
+Integrating across the top will give $2b$, along the bottom $2b$, and along the left side $2a$ totaling $4(a+b)$.
 
 
 ---
@@ -822,7 +822,7 @@ $$
 \oint_C B\cdot\hat{T} ds = \mu_0 I.
 $$
 
-The goal here is to re-express this integral law to produce a law at each point of the field. Let $S$ be a surface with boundary $C$, Let $J$ be the current density - $J=\rho v$, with $\rho$ the density of the current (not time-varying) and $v$ the velocity. The current can be re-expressed as $I = \iint_S J\cdot\hat{n}dA$. (If the current flows through a wire and $S$ is much bigger than the wire, this is still valid as $\rho=0$ outside of the wire.)
+The goal here is to re-express this integral law to produce a law at each point of the field. Let $S$ be a surface with boundary $C$, Let $J$ be the current density - $J=\rho v$, with $\rho$ the density of the current (not time-varying) and $v$ the velocity. The current can be re-expressed as $I = \iint_S J\cdot\hat{N}dA$. (If the current flows through a wire and $S$ is much bigger than the wire, this is still valid as $\rho=0$ outside of the wire.)
 
 
 We then have:
@@ -859,7 +859,7 @@ $$
 -\iint_S \left(\frac{\partial{B}}{\partial{t}}\cdot\hat{N}\right)dS =
 -\frac{\partial{\phi}}{\partial{t}} =
 \oint_C E\cdot\hat{T}ds =
-\iint_S (\nabla\times{E}) dS.
+\iint_S (\nabla\times{E})\cdot\hat{N} dS.
 $$
 
 This is true for any capping surface for $C$. Shrinking $C$ to a point means it will hold for each point in $R^3$. That  is:
@@ -884,10 +884,10 @@ Green's theorem gave a characterization of $2$-dimensional conservative fields, 
 Stokes's theorem can be used to show the first and fourth are equivalent.
 
 
-First, if $0 = \oint_C F\cdot\hat{T} ds$, then by Stokes' theorem $0 = \int_S \nabla\times{F} dS$ for any orientable surface $S$ with boundary $C$. For a given point, letting $C$ shrink to that point can be used to see that the cross product must be $0$ at that point.
+First, if $0 = \oint_C F\cdot\hat{T} ds$, then by Stokes' theorem $0 = \iint_S \nabla\times{F}\cdot\hat{N} dS$ for any orientable surface $S$ with boundary $C$. For a given point, letting $C$ shrink to that point can be used to see that the cross product must be $0$ at that point.
 
 
-Conversely, if the cross product is zero in a simply connected region, then take any simple closed curve, $C$ in the region. If the region is [simply connected](http://math.mit.edu/~jorloff/suppnotes/suppnotes02/v14.pdf) then there exists an orientable surface, $S$ in the region with boundary $C$ for which: $\oint_C F\cdot{N} ds = \iint_S (\nabla\times{F})\cdot\hat{N}dS=  \iint_S \vec{0}\cdot\hat{N}dS = 0$.
+Conversely, if the cross product is zero in a simply connected region, then take any simple closed curve, $C$ in the region. If the region is [simply connected](http://math.mit.edu/~jorloff/suppnotes/suppnotes02/v14.pdf) then there exists an orientable surface, $S$ in the region with boundary $C$ for which: $\oint_C F\cdot\hat{T} ds = \iint_S (\nabla\times{F})\cdot\hat{N}dS=  \iint_S \vec{0}\cdot\hat{N}dS = 0$.
 
 
 The construction of a scalar potential function from the field can be done as illustrated in this next example.
@@ -970,7 +970,7 @@ This is also easy, as `Ft` has only an `x` component and `rp` has only `y` and `
 In two dimensions the vector field $F(x,y) = \langle -y, x\rangle/(x^2+y^2) = S(x,y)/\|R\|^2$ is irrotational ($0$ curl) and has $0$ divergence, but is *not* conservative in $R^2$, as with $C$ being the unit disk we have $\oint_C F\cdot\hat{T}ds = \int_0^{2\pi} \langle -\sin(\theta),\cos(\theta)\rangle \cdot \langle-\sin(\theta), \cos(\theta)\rangle/1 d\theta = 2\pi$. This is because $F$ is not continuously differentiable at the origin, so the path $C$ is not in a simply connected domain where $F$ is continuously differentiable. (Were $C$ to avoid the origin, the integral would be $0$.)
 
 
-In three dimensions, removing a single point in a domain does change simple connectedness, but removing an entire line will. So the function $F(x,y,z) =\langle -y,x,0\rangle/(x^2+y^2)\rangle$ will have $0$ curl, $0$ divergence, but won't be conservative in a domain that includes the $z$ axis.
+In three dimensions, removing a single point in a domain does not change simple connectedness, but removing an entire line will. So the function $F(x,y,z) =\langle -y,x,0\rangle/(x^2+y^2)\rangle$ will have $0$ curl, $0$ divergence, but won't be conservative in a domain that includes the $z$ axis.
 
 
 However, the function $F(x,y,z) = \langle x, y,z\rangle/\sqrt{x^2+y^2+z^2}$ has curl $0$, except at the origin. However, $R^3$ less the origin, as a domain, is simply connected, so $F$ will be conservative.
@@ -983,15 +983,15 @@ The divergence theorem is a consequence of a simple observation. Consider two ad
 
 
 $$
-\oint_S F\cdot{N} dA = \sum \oint_{S_i} F\cdot{N} dA.
+\oint_S F\cdot\hat{N} dA = \sum \oint_{S_i} F\cdot\hat{N} dA.
 $$
 
-If the partition provides a microscopic perspective, then the divergence approximation $\nabla\cdot{F} \approx (1/\Delta{V_i}) \oint_{S_i} F\cdot{N} dA$ can be used to say:
+If the partition provides a microscopic perspective, then the divergence approximation $\nabla\cdot{F} \approx (1/\Delta{V_i}) \oint_{S_i} F\cdot\hat{N} dA$ can be used to say:
 
 
 $$
-\oint_S F\cdot{N} dA =
-\sum \oint_{S_i} F\cdot{N} dA \approx
+\oint_S F\cdot\hat{N} dA =
+\sum \oint_{S_i} F\cdot\hat{N} dA \approx
 \sum (\nabla\cdot{F})\Delta{V_i} \approx
 \iiint_V \nabla\cdot{F} dV,
 $$
@@ -1046,7 +1046,7 @@ In fact, all $6$ sides will be $0$, as in this case $F \cdot \hat{i} = xy$ and a
 As such, the two sides of the Divergence theorem are both $0$, so the theorem is verified.
 
 
-###### Example
+##### Example
 
 
 (From Strang) If the temperature inside the sun is $T = \log(1/\rho)$ find the *heat* flow $F=-\nabla{T}$; the source, $\nabla\cdot{F}$; and the flux, $\iint F\cdot\hat{N}dS$. Model the  sun as a ball of radius $\rho_0$.
@@ -1193,7 +1193,7 @@ The simplification done by SymPy masks the presence of $R^{-5/2}$ when taking th
 
 $$
 0 = \iiint_V \nabla\cdot{F} dV =
-\oint_S F\cdot{N}dS = \oint_S \frac{R}{\|R\|^3} \cdot{R} dS =
+\oint_S F\cdot\hat{N}dS = \oint_S \frac{R}{\|R\|^3} \cdot{R} dS =
 \oint_S 1 dS = 4\pi.
 $$
 
@@ -1249,7 +1249,7 @@ numericq(val)
 Let $\hat{N} = \langle \cos(t), \sin(t) \rangle$ and $\hat{T} = \langle -\sin(t), \cos(t)\rangle$. Then polar coordinates can be viewed as the parametric curve $\vec{r}(t) = r(t) \hat{N}$.
 
 
-Applying Green's theorem to the vector field $F = \langle -y, x\rangle$ which along the curve is $r(t) \hat{T}$ we know the area formula $(1/2) (\int xdy - \int y dx)$. What is this in polar coordinates (using $\theta=t$?) (Using $(r\hat{N}' = r'\hat{N} + r \hat{N}' = r'\hat{N} +r\hat{T}$ is useful.)
+Applying Green's theorem to the vector field $F = \langle -y, x\rangle$ which along the curve is $r(t) \hat{T}$ we know the area formula $(1/2) (\int xdy - \int y dx)$. What is this in polar coordinates (using $\theta=t$?) (Using $(r\hat{N})' = r'\hat{N} + r \hat{N}' = r'\hat{N} +r\hat{T}$ is useful.)
 
 
 ```{julia}
@@ -1338,7 +1338,7 @@ answ = 2
 radioq(choices, answ, keep_order=true)
 ```
 
-Along  path $C$, $F(x,y) = [1,x]$ and $\hat{T}=-\hat{i}$ so $F\cdot\hat{T} = -1$. The path integral $\int_C (F\cdot\hat{T})ds = -1$. What is the value of the path integral over $A$?
+Along  path $C$, $F(x,y) = [1,x]$ and $\hat{T}=-\hat{i}$ so $F\cdot\hat{T} = -1$. The path integral $\int_C (F\cdot\hat{T})ds = -1$. What is the value of the path integral over $B$?
 
 
 ```{julia}
@@ -1441,7 +1441,7 @@ radioq(choices, answ, keep_order=true)
 ###### Question
 
 
-Let $R(x,y,z) = \langle x, y, z\rangle$ and $\rho = \|R\|^2$. If $F = 2R/\rho^2$ then $F$ is the gradient of a potential. Which one?
+Let $R(x,y,z) = \langle x, y, z\rangle$ and $\rho = \|R\|^2$. If $F = 2R/\rho$ then $F$ is the gradient of a potential. Which one?
 
 
 ```{julia}
@@ -1545,7 +1545,7 @@ The diagram emphasizes a few different things:
 The one for the curl in $n=2$ is Green's theorem: $\iint_S \nabla\times{F}dA = \oint_{\partial{S}} F\cdot d\vec{r}$.
 
 
-The one for the curl in $n=3$ is Stoke's theorem: $\iint S \nabla\times{F}dA = \oint_{\partial{S}} F\cdot d\vec{r}$. Finally, the divergence for $n=3$ is the divergence theorem $\iint_V \nabla\cdot{F} dV = \iint_{\partial{V}} F dS$.
+The one for the curl in $n=3$ is Stoke's theorem: $\iint_S \nabla\times{F}dA = \oint_{\partial{S}} F\cdot d\vec{r}$. Finally, the divergence for $n=3$ is the divergence theorem $\iint_V \nabla\cdot{F} dV = \iint_{\partial{V}} F dS$.
 
 
   * Working left to right along a row of the diagram, applying two steps of these operations yields:
