--- a/quarto/alternatives/plotly_plotting.qmd
+++ b/quarto/alternatives/plotly_plotting.qmd
@@ -149,7 +149,7 @@ The difference is solely the specification of the `mode` value, for a line plot 
 ### Nothing
 
 
-The line graph plays connect-the-dots with the points specified by paired `x` and `y` values. *Typically*, when and `x` value is `NaN` that "dot" (or point) is skipped. However, `NaN` doesn't pass through the JSON conversion – `nothing` can be used.
+The line graph plays connect-the-dots with the points specified by paired `x` and `y` values. *Typically*, when `x` value is `NaN` that "dot" (or point) is skipped. However, `NaN` doesn't pass through the JSON conversion – `nothing` can be used.
 
 
 ```{julia}
@@ -381,17 +381,17 @@ In the following, to highlight the difference between $f(x) = \cos(x)$ and $p(x)
 xs = range(-1, 1, 100)
 data = [
     Config(
-	    x=xs, y=cos.(xs),
-	    fill = "tonexty",
-	    fillcolor = "rgba(0,0,255,0.25)", # to get transparency
-	    line = Config(color=:blue)
-    ),
-	Config(
 		x=xs, y=[1 - x^2/2 for x ∈ xs ],
 		fill = "tozeroy",
 		fillcolor = "rgba(255,0,0,0.25)", # to get transparency
 		line = Config(color=:red)
-	)
+	  ),
+    Config(
+	    x=xs, y=cos.(xs),
+	    fill = "tonexty",
+	    fillcolor = "rgba(0,0,255,0.25)", # to get transparency
+	    line = Config(color=:blue)
+    )
 ]
 Plot(data)
 ```
@@ -428,7 +428,7 @@ lyt = Config(title = "Main chart title",
 Plot(data, lyt)
 ```
 
-The `xaxis` and `yaxis` keys have many customizations. For example: `nticks` specifies the maximum number of ticks; `range` to set the range of the axis; `type` to specify the axis type from "linear", "log", "date", "category", or "multicategory;" and `visible`
+The `xaxis` and `yaxis` keys have many customizations. For example: `nticks` specifies the maximum number of ticks; `range` to set the range of the axis; `type` to specify the axis type from "linear", "log", "date", "category", or "multicategory"; and `visible`.
 
 
 The aspect ratio of the chart can be set to be equal through the `scaleanchor` key, which specifies another axis to take a value from. For example, here is a parametric plot of a circle:
