update some typos.

--- a/quarto/misc/calculus_with_julia.qmd
+++ b/quarto/misc/calculus_with_julia.qmd
@@ -57,7 +57,7 @@ The `Julia` language provides the building blocks for the wider `Julia` ecosyste
 Package installation is straightforward, as `Julia` has a package, `Pkg`, that facilitates this.
 
 
-Since `Julia` version 1.7, just attempting to load a package through  `using PackageName` at the *command line* will either load an installed package *or* query for an uninstalled package to be installed before lading. So installation just requires confirming a prompt.
+Since `Julia` version 1.7, just attempting to load a package through  `using PackageName` at the *command line* will either load an installed package *or* query for an uninstalled package to be installed before loading. So installation just requires confirming a prompt.
 
 
 For more control, the command line and `IJulia` provide access to the function in `Pkg` through the escape command `]`. For example, to find the status of all currently installed packages, the following command can be executed:
