--- a/quarto/misc/quick_notes.qmd
+++ b/quarto/misc/quick_notes.qmd
@@ -168,7 +168,7 @@ When a function has multiple arguments, yet the value passed in is a container h
 ### Multiple dispatch
 
 
-`Julia` can have many methods for a single generic function. (E.g., it can have many different implementations of addiion when the `+` sign is encountered.) The *type*s of the arguments and the number of arguments are used for dispatch.
+`Julia` can have many methods for a single generic function. (E.g., it can have many different implementations of addition when the `+` sign is encountered.) The *type*s of the arguments and the number of arguments are used for dispatch.
 
 
 Here the number of arguments is used:
@@ -474,7 +474,7 @@ Many different computer languages implement `map`, broadcasting is less common. 
 ## Plots
 
 
-The following commands use the `Plots` package. The `Plots` package expects a choice of backend. We will use `gr` unless, but other can be substituted by calling an appropriate command, suchas `pyplot()` or `plotly()`.
+The following commands use the `Plots` package. The `Plots` package expects a choice of backend. We will use `gr` unless, but other can be substituted by calling an appropriate command, such as `pyplot()` or `plotly()`.
 
 
 ```{julia}
@@ -526,7 +526,7 @@ Arguments of interest include
 |:--------------:|:------------------------------------------------------:|
 |    `legend`    | A boolean, specify `false` to inhibit drawing a legend |
 | `aspect_ratio` |   Use `:equal` to have x and y axis have same scale    |
-|  `linewidth`   |    Ingters greater than 1 will thicken lines drawn     |
+|  `linewidth`   |    Integers greater than 1 will thicken lines drawn     |
 |    `color`     |  A color may be specified by a symbol (leading `:`).   |
 |                |            E.g., `:black`, `:red`, `:blue`             |
 
