--- a/quarto/misc/unicode.qmd
+++ b/quarto/misc/unicode.qmd
@@ -3,7 +3,7 @@
 
 {{< include ../_common_code.qmd >}}
 
-`Julia` allows the use of *Unicode* symbols to replace variable names and for function calls. Unicode operations are entered in this pattern `\name[tab]`. That is a slash, `\`, the name (e.g., `alpha`), and then a press of the `tab` key.
+`Julia` allows the use of *Unicode* symbols to replace variable names and for function calls. Unicode operations are entered in this pattern `\name[tab]`. That is a backslash, `\`, the name (e.g., `alpha`), and then a press of the `tab` key.
 
 
 In these notes, the following may appear as variable or function names
