edits; parameterized surface

--- a/quarto/index.qmd
+++ b/quarto/index.qmd
@@ -71,7 +71,7 @@ books visit <https://quarto.org/docs/books>.
 These notes may be compiled into a `pdf` file through Quarto. As the result is rather large, we do not provide that file for download. For the interested reader, downloading the repository, instantiating the environment, and running `quarto` to render to `pdf` in the `quarto` subdirectory should produce that file (after some time).
 
 To *contribute* -- say by suggesting addition topics, correcting a
-mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors). Thanks to all contributors and a special thanks to `@fangliu-tju` for their careful proofreading.
+mistake, or fixing a typo -- click the "Edit this page" link and join the list of [contributors](https://github.com/jverzani/CalculusWithJuliaNotes.jl/graphs/contributors). Thanks to all contributors and a *very* special thanks to `@fangliu-tju` for their careful and most-appreciated proofreading.
 
 ----
 
