--- a/quarto/misc/quick_notes.qmd
+++ b/quarto/misc/quick_notes.qmd
@@ -23,7 +23,6 @@ The `Julia` packages loaded below are all loaded when the `CalculusWithJulia` pa
 
 A `Julia` package is loaded with the `using` command:
 
-
 ```{julia}
 using LinearAlgebra
 ```
@@ -455,6 +454,7 @@ This should be contrasted to the case when both `xs` and `ys` are (column) vecto
 
 
 ```{julia}
+#| error: true
 g.(xs, [4,5])
 ```
 
@@ -710,10 +710,7 @@ implicit_plot(f)
 ### Plotting a parameterized surface $f:R^2 \rightarrow R^3$
 
 
-The `pyplot` (and `plotly`) backends allow plotting of parameterized surfaces.
-
-
-The low-level `surface(xs,ys,zs)` is used, and can be specified directly as follows:
+The `pyplot` (and `plotly`) backends allow plotting of parameterized surfaces. The low-level `surface(xs,ys,zs)` is used, as illustrated here.
 
 
 ```{julia}
@@ -723,7 +720,7 @@ Y(theta, phi) = sin(phi)*sin(theta)
 Z(theta, phi) = cos(phi)
 thetas = range(0, pi/4, length=20)
 phis = range(0, pi, length=20)
-surface(X.(thetas, phis'), Y.(thetas, phis'), Z.(thetas, phis'))
+# surface(X.(thetas, phis'), Y.(thetas, phis'), Z.(thetas, phis'))
 ```
 
 ### Plotting a vector field $F:R^2 \rightarrow R^2$.
